# negfpy

./: .gitattributes  .gitignore  environment.yml  graphene_1L_PBE_van.fc  pyproject.toml
examples/: README.md  chain_mass_defect.py  graphene_ifc_dispersion_gkmg.py  graphene_ifc_transmission.py  graphene_ifc_transmission_benchmark.py  graphene_ifc_transmission_old_convention.py  graphene_kmatrix_legacy_benchmark.py  graphene_old_convention_reproduce.py  material_kspace_multidof_3d.py  run_ifc_bulk.py  silicon_ifc_bulk_dos.py  silicon_ifc_dispersion_compare.py  silicon_ifc_dos.py  silicon_ifc_transmission.py
oldfortrancode/: Makefile  NEGF.f90  README  Transmission.f90  Tw.txt  force.f90  force_constants.mod  interfaces.mod  material_para.mod  para.in  parameters.f90  running_para.mod  sfgsolve.f90  sgf.f90  sizes.mod  transform.f90
outputs/: Tw_reproduced_oldconvention_1700_with_area.txt  Tw_reproduced_oldconvention_legacysgf.txt  graphene_adaptive_eta_ratio_diagnostic.txt  graphene_fixedeta_legacy_vs_new_data.txt  graphene_kmatrix_legacy_benchmark_1700_scaled_data.txt  graphene_new_fixed_eta_1e-4_data.txt  graphene_new_fixed_eta_1e-5_data.txt  graphene_new_fixed_eta_1e-5_legacy_data.txt  graphene_new_fixed_eta_1e-6_data.txt  graphene_new_fixed_eta_1e-6_legacy_data.txt  graphene_new_fixed_eta_1e-9_data.txt  graphene_new_python_adaptive1700_data.txt  graphene_new_python_fixed1700_eta1e7_evscale_data.txt  graphene_transmission_trunc_dy3_adaptive_data.txt  graphene_transmission_trunc_dy3_fixed_eta1e7_data.txt  silicon_rejected_samples.txt
studies/: README.md
(+336 files in other folders)
