[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "negfpy"
version = "0.0.1"
description = "Phonon NEGF development"
requires-python = ">=3.10"
dependencies = ["numpy", "scipy"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]